--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -42,4 +42,14 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+
+	<connectionStrings>
+		<add name="LibraryDBConnectionString"
+			 connectionString="Data Source=DESKTOP-CGRB0T0;InitialCatalogue=Books;Persist Security Info=True;UserID=Books;Password=Books"
+			 providerName="System.Data.SQLClient" />
+
+
+	</connectionStrings>
+	
 </configuration>
+
