--- a/WebApplication1/WebApplication1.vbproj
+++ b/WebApplication1/WebApplication1.vbproj
@@ -151,6 +151,7 @@
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="WebPages\Books.aspx.cs" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -249,6 +250,12 @@
     </Compile>
     <Compile Include="Site.Mobile.Master.designer.vb">
       <DependentUpon>Site.Mobile.Master</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\Books.aspx.cs.designer.vb">
+      <DependentUpon>Books.aspx.cs.vb</DependentUpon>
+    </Compile>
+    <Compile Include="WebPages\Books.aspx.cs.vb">
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
